umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_quinuclidine.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms [
        "N#n#v3"
        "C#h2#v2"
        "C#h2#v2"
        "C#h#v3"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"]
      :bonds [
        [0 1 "1"]
        [1 2 "1"]
        [2 3 "1"]
        [0 4 "1"]
        [4 5 "1"]
        [5 3 "1"]
        [0 6 "1"]
        [6 7 "1"]
        [7 3 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms [
        "N#n#v3"
        "C#h2#v2"
        "C#h2#v2"
        "C#h#v3"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"]
      :bonds [
        [0 1 "1"]
        [1 2 "1"]
        [2 3 "1"]
        [0 4 "1"]
        [4 5 "1"]
        [5 3 "1"]
        [0 6 "1"]
        [6 7 "1"]
        [7 3 "1"]]}
    :success true}}
