umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_small_dioxirane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["C#h2" "O#n2" "O#n2"]
      :bonds [[0 1 :single] [1 2 :single] [0 2 :single]]}
    :success true
    :tie-breaks [0]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["C#h2" "O#n2" "O#n2"]
      :bonds [[0 1 :single] [1 2 :single] [0 2 :single]]}
    :success true
    :tie-breaks [0]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {0 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]}}}
